// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Metrics Query Given a metrics query with filters should generate the correct request 1`] = `
{
  "data": {
    "filter": {},
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-oauth/api/v1/projects/TestProject/assets/list",
}
`;

exports[`Metrics Query Given a metrics query with no options should generate the correct request 1`] = `
{
  "data": {
    "filter": {},
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-oauth/api/v1/projects/TestProject/assets/list",
}
`;

exports[`Metrics Query Given a metrics query with unmatched filters should generate the correct request 1`] = `
{
  "data": {
    "filter": {},
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-oauth/api/v1/projects/TestProject/assets/list",
}
`;

exports[`Metrics Query Given a nested variable query should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "parentIds": [
        123,
      ],
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-oauth/api/v1/projects/TestProject/assets/list",
}
`;

exports[`Metrics Query Given a simple metrics query should generate the correct request 1`] = `
{
  "data": {
    "filter": {
      "id": 123,
    },
    "limit": 1000,
  },
  "headers": undefined,
  "method": "POST",
  "url": "/api/datasources/proxy/6/cdf-oauth/api/v1/projects/TestProject/assets/list",
}
`;

exports[`Metrics Query Given an incorrect filter query should throw an error if filter regexp is wrong 1`] = `[SyntaxError: Invalid regular expression: /^*.foo$/: Nothing to repeat]`;
